--- a/Responsive Web Design/etc/temp.html
+++ b/Responsive Web Design/etc/temp.html
@@ -16,21 +16,23 @@
       </ul>
     </nav>
 
-    <section id="welcome-section">
-      <h1>Hi, I'm Ino</h1>
-      <p>a Developer</p>
-    </section>
+    <main>
+      <section id="welcome-section">
+        <h1>Hi, I'm Ino</h1>
+        <p>a Developer</p>
+      </section>
 
-    <section id="projects">
-      <h2></h2>
-      <div class="projects-grid">
-        <a class="project-tile">
-        </a>
-      </div>
-    </section>
+      <section id="projects">
+        <h2></h2>
+        <div class="projects-grid">
+          <a class="project-tile">
+          </a>
+        </div>
+      </section>
 
-    <section id="contact">
-      <a id="profile-link" target="_blank"></a>
-    </section>
+      <section id="contact">
+        <a id="profile-link" target="_blank"></a>
+      </section>
+    </main>
   </body>
 </html>
