Update temp.html (Personal Portfolio Webpage)

--- a/Responsive Web Design/etc/temp.html
+++ b/Responsive Web Design/etc/temp.html
@@ -18,12 +18,14 @@
 
     <main>
       <section id="welcome-section">
-        <h1>Hi, I'm Ino</h1>
+        <h1>
+          <a class="me">H</a><a class="ji">i</a><a class="">,</a> <a class="ku">I</a><a class="">'</a><a class="hi">m</a> <a class="bi">I</a><a class="ni">n</a><a class="u">o</a>
+        </h1>
         <p>a Developer</p>
       </section>
 
       <section id="projects">
-        <h2></h2>
+        <h2>My Projects</h2>
         <div class="projects-grid">
           <a class="project-tile">
           </a>
