--- a/Responsive Web Design/etc/temp.html
+++ b/Responsive Web Design/etc/temp.html
@@ -27,7 +27,29 @@
       <section id="projects">
         <h2>My Projects</h2>
         <div class="projects-grid">
-          <a class="project-tile">
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" class="project-image">
+            <p class="project-title"></p>
+          </a>
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" class="project-image">
+            <p class="project-title"></p>
+          </a>
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" class="project-image">
+            <p class="project-title"></p>
+          </a>
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" class="project-image">
+            <p class="project-title"></p>
+          </a>
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" class="project-image">
+            <p class="project-title"></p>
+          </a>
+          <a href="#" class="project-tile" target="_blank" class="project-tile">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" class="project-image">
+            <p class="project-title"></p>
           </a>
         </div>
       </section>
