--- a/Responsive Web Design/01-Survey Form/index.html
+++ b/Responsive Web Design/01-Survey Form/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Survey Form</title>
+  <meta charset="UTF-8"> 
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1 id="title">Survey Form</h1>
+  <p id="description">This is a survey form</p>
+
+  <form id="survey-form">
+    <fieldset>
+      <legend>Identity</legend>
+      <label id="name-label">Name? <input type="text" id="name" placeholder="Budi" required /></label>
+      <label id="email-label">Email? <input type="email" id="email" placeholder="budi@gmail.com" required /></label>
+      <label id="number-label">NIM? <input type="number" id="number" min="18220000" max="18220100" placeholder="18220055" required /></label>
+      <label id="select-label">Gender?
+        <select id="dropdown">
+          <option></option>
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+      </label>
+    </fieldset>
+      
+    <fieldset>
+      <legend>Mode preference</legend>
+      <label><input type="radio" id="light" name="mode" value="light" class="inline" /> Light mode</label>
+      <label><input type="radio" id="dark" name="mode" value="dark" class="inline" /> Dark mode</label>
+    </fieldset>
+
+    <fieldset>
+      <legend>OS preference</legend>
+      <label><input type="checkbox" value="android" class="inline" /> Android</label>
+      <label><input type="checkbox" value="ios" class="inline" /> iOS</label>
+      <label>Reason
+        <textarea>
+        </textarea>
+      </label>
+    </fieldset>
+
+    <input type="submit" id="submit" />
+  </form>
+    
+</body>
