--- a/Responsive Web Design/etc/temp.html
+++ b/Responsive Web Design/etc/temp.html
@@ -27,29 +27,53 @@
       <section id="projects">
         <h2>My Projects</h2>
         <div class="projects-grid">
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                AAAAAAA
+              <span class="code">/></span>
+            </p>
           </a>
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                BBBBBBB
+              <span class="code">/></span>
+            </p>
           </a>
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                CCCCCCC
+              <span class="code">/></span>
+            </p>
           </a>
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                DDDDDDD
+              <span class="code">/></span>
+            </p>
           </a>
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                EEEEEEE
+              <span class="code">/></span>
+            </p>
           </a>
-          <a href="#" class="project-tile" target="_blank" class="project-tile">
+          <a href="#" class="project-tile" target="_blank">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" class="project-image">
-            <p class="project-title"></p>
+            <p class="project-title">
+              <span class="code"><</span>
+                FFFFFFF
+              <span class="code">/></span>
+            </p>
           </a>
         </div>
       </section>
