--- a/Responsive Web Design/etc/temp.html
+++ b/Responsive Web Design/etc/temp.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
 
   <body>
@@ -79,7 +80,10 @@
       </section>
 
       <section id="contact">
-        <a id="profile-link" target="_blank"></a>
+        <a id="profile-link"  target="_blank" href="github.com/sususaiasusubendera">
+          <i class="fab fa-github"></i>
+          Github
+        </a>
       </section>
     </main>
   </body>
